# dolphin

./: .gitmodules  CMakeLists.txt
Source/Core/Common/: FileUtil.cpp  FileUtil.h  MemArena.cpp  NandPaths.cpp  NandPaths.h  SettingsHandler.cpp  SettingsHandler.h
Source/Core/Common/Logging/: LogManager.h
Source/Core/Core/: CMakeLists.txt  ConfigManager.cpp  Core.cpp  Core.vcxproj  Core.vcxproj.filters  Movie.cpp  NetPlayClient.cpp  NetPlayProto.h  NetPlayServer.cpp  State.cpp  SysConf.cpp  SysConf.h  WiiRoot.cpp  WiiRoot.h  WiiUtils.cpp  ec_wii.cpp  ec_wii.h
Source/Core/Core/Boot/: Boot.cpp  Boot.h  Boot_BS2Emu.cpp  Boot_WiiWAD.cpp
Source/Core/Core/ConfigLoaders/: BaseConfigLoader.cpp
Source/Core/Core/DSP/: DSPAccelerator.cpp  DSPAccelerator.h  DSPCore.cpp  DSPHWInterface.cpp
Source/Core/Core/HW/: Memmap.cpp  Memmap.h  ProcessorInterface.cpp  WII_IPC.cpp  WiiSave.cpp  WiiSave.h  WiiSaveCrypted.cpp  WiiSaveCrypted.h
Source/Core/Core/IOS/: Device.cpp  Device.h  DeviceLLE.cpp  DeviceLLE.h  IOS.cpp  IOS.h  IOSC.cpp  IOSC.h  IPC.cpp  IPC.h
Source/Core/Core/IOS/ES/: ES.cpp  (+9 more)
Source/Core/DiscIO/: VolumeWad.cpp  VolumeWii.cpp  WiiSaveBanner.cpp  WiiSaveBanner.h
Source/Core/DolphinQt2/: MenuBar.cpp
Source/Core/DolphinWX/: FrameTools.cpp  GameListCtrl.cpp  GameListCtrl.h  Globals.h  VideoConfigDiag.cpp
Source/Core/UICommon/: GameFile.cpp  GameFile.h  GameFileCache.cpp  GameFileCache.h  UICommon.cpp
Source/Core/VideoCommon/: HiresTextures.cpp
Source/DSPSpy/: CMakeLists.txt
Source/DSPSpy/tests/: accelerator_test.ds  dsp_base.inc
Source/VSProps/: Base.props
(+44 files in other folders)
